syntax="proto3";

package watch2gather.proto.userapi;

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/Watch2Gather/server/proto/gen";

service UserService {
  rpc RegisterUser (RegisterUserRequest) returns (RegisterUserResponse) {
    option (google.api.http) = {
      post: "/api/v1/user/register"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Register new user."
      description: "Register new user and add it to the database."
    };
  }
  rpc LoginUser (LoginUserRequest) returns (LoginUserResponse) {
    option (google.api.http) = {
      post: "/api/v1/user/login"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Login user."
      description: "Login user and return session token."
    };
  }
}

message RegisterUserRequest {
  string username = 1;
  string email = 2;
  string password = 3;
}

message RegisterUserResponse {
  string user_id = 1;
}

message LoginUserRequest {
  string username = 1;
  string password = 2;
}

message LoginUserResponse {
  string token = 2;
}

message User {
  string username = 1;
  string email = 2;
  string password_hash = 3;
}
